fix(Gallery): rename fill to stretched

--- a/packages/vkui/src/components/BaseGallery/BaseGallery.module.css
+++ b/packages/vkui/src/components/BaseGallery/BaseGallery.module.css
@@ -86,7 +86,7 @@
   opacity: 0;
 }
 
-.arrowAreaFill {
+.arrowAreaStretched {
   inset-block-start: 0;
 }
 
